[package]
name = "rustcorder"
version = "0.1.0"
authors = ["Travis Weir <tweirtx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["voice"]
version = "0.8.6"

[dependencies]
pretty_env_logger = "0.4.0"
