[package]
name = "rustcorder"
version = "0.1.0"
authors = ["Travis Weir <tweirtx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
features = ["voice"]

[dependencies]
pretty_env_logger = "0.4.0"

[dependencies.tokio]
version = "0.2"
features = ["macros"]
