[package]
name = "rustcorder"
version = "0.1.0"
authors = ["Travis Weir <tweirtx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
features = ["voice", "rustls_backend", "client", "http", "gateway", "model"]
default-features = false


[dependencies]
pretty_env_logger = "0.4.0"
opus = "0.2.1"

[dependencies.tokio]
version = "0.2"
features = ["macros"]
